# mlx90640-library

./: .gitignore  CMakeLists.txt
examples/src/: fbuf.cpp  hotspot.cpp  interp.cpp  rawrgb.cpp  sdlscale.cpp  step.cpp  test.cpp  video.cpp
examples/src/lib/: fb.c  fb.h  interpolate.c  interpolate.h
functions/: MLX90640_API.cpp  MLX90640_I2C_Driver.cpp  MLX90640_LINUX_I2C_Driver.cpp  MLX90640_RPI_I2C_Driver.cpp  MLX90640_SWI2C_Driver.cpp
headers/: MLX90640_API.h  MLX90640_I2C_Driver.h
python/: rgb-to-gif.py
